--- a/cchat/GNUmakefile
+++ b/cchat/GNUmakefile
@@ -1,10 +1,13 @@
-all: gui client server cchat
+all: gui client server cchat channel
 
 cchat:  cchat.erl server.beam gui.beam
 	erl -compile cchat.erl
 
 server: server.erl defs.hrl genserver
 	erl -compile server.erl
+
+channel: channel.erl defs.hrl genserver
+	erl -compile channel.erl
 
 client: client.erl defs.hrl lexgrm genserver
 	erl -compile client.erl
